--- a/PAGES/CheckWeather/check-weather.html
+++ b/PAGES/CheckWeather/check-weather.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Check</title>
         <link rel="stylesheet" href="../../styles/style.css">
-    <link rel="stylesheet" href="check-weather-page.css">
+        <!-- Page-specific styles inlined to keep this page self-contained -->
+        <style>
+        /* Minimalistic card layout and suggestions dropdown */
+        :root{--primary:#224c8e;--muted:#e18f9f}
+        body.weather-page{background:linear-gradient(135deg,#f7f9fc,#e8f1ff);}
+        .page-content{flex:1 1 auto;display:flex;align-items:center;justify-content:center;padding:2rem 1rem 80px}
+        .weather-container{background:rgba(255,255,255,0.98);padding:2rem;border-radius:16px;box-shadow:0 10px 30px rgba(34,76,142,0.08);width:100%;max-width:520px}
+        h1{color:var(--primary);margin:0 0 1rem;font-size:1.5rem;text-align:center}
+        .search-box{display:flex;gap:.5rem;margin-bottom:0.5rem}
+        .search-wrap{position:relative;flex:1}
+        #cityInput{width:100%;padding:.75rem 1rem;border:2px solid var(--muted);border-radius:12px;font-size:1rem}
+        #cityInput:focus{outline:none;border-color:var(--primary)}
+        #searchBtn{padding:.75rem 1.25rem;background:var(--primary);color:#fff;border:none;border-radius:12px;cursor:pointer}
+        #searchBtn:disabled{background:#c9d5ea;cursor:not-allowed}
+        .suggestions{position:absolute;left:0;right:0;top:100%;background:#fff;border:1px solid #e6eefb;border-radius:8px;margin-top:.5rem;box-shadow:0 8px 20px rgba(34,76,142,0.06);z-index:50;max-height:200px;overflow:auto;padding:0;list-style:none}
+        .suggestions li{padding:.6rem .9rem;cursor:pointer;border-bottom:1px solid #f1f6ff}
+        .suggestions li:last-child{border-bottom:none}
+        .suggestions li:hover,.suggestions li.active{background:#f1f6ff}
+        .no-results{padding:.6rem .9rem;color:#777}
+        .weather-info{display:none;background:#f7f9fc;padding:1.2rem;border-radius:12px;margin-top:1rem}
+        .weather-info.visible{display:block}
+        .weather-details{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:.75rem;text-align:center}
+        .weather-item{padding:.75rem;background:#fff;border-radius:10px;box-shadow:0 2px 8px rgba(34,76,142,0.03)}
+        .label{color:#666;font-size:.85rem;margin-bottom:.25rem}
+        .value{color:var(--primary);font-weight:700;font-size:1.1rem}
+        .error-message{display:none;color:#b91c1c;background:#fff0f0;padding:.6rem;border-radius:8px;margin-top:.6rem;text-align:center}
+        .error-message.visible{display:block}
+        .loading{margin-top:.75rem;text-align:center;color:var(--primary)}
+        @media (max-width:480px){.weather-container{padding:1rem;border-radius:12px}.search-box{flex-direction:column}.suggestions{max-height:160px}}
+        </style>
 </head>
-<body>
+<body class="weather-page">
         <!-- Inlined header (previously components/header.html) -->
         <header class="top-nav">
             <div class="top-nav-inner">
@@ -34,11 +63,15 @@
                 });
             })();
         </script>
-    <div class="container">
+    <div class="weather-page-content">
+        <div class="weather-container">
         <h1>Weather Check</h1>
         <div class="search-box">
-            <input type="text" id="cityInput" placeholder="Enter city name..." aria-label="City name">
-            <button id="searchBtn">Search</button>
+            <div class="search-wrap">
+                <input type="text" id="cityInput" placeholder="Enter city name..." aria-label="City name" autocomplete="off">
+                <ul id="suggestions" class="suggestions" hidden></ul>
+            </div>
+            <button id="searchBtn">Get Weather</button>
         </div>
         <div id="errorMsg" class="error-message"></div>
         <div id="weatherInfo" class="weather-info">
@@ -56,14 +89,29 @@
                     <div class="label">Wind Speed</div>
                     <div id="windSpeed" class="value"></div>
                 </div>
+                <div class="weather-item">
+                    <div class="label">Observed at</div>
+                    <div id="observedAt" class="value"></div>
+                </div>
+                <div class="weather-item">
+                    <div class="label">Timezone</div>
+                    <div id="tz" class="value"></div>
+                </div>
+                <div class="weather-item">
+                    <div class="label">Elevation</div>
+                    <div id="elevation" class="value"></div>
+                </div>
             </div>
         </div>
 
+        </div>
     </div>
 
     <script>
-        // Get DOM elements
+    (function(){
+        // Elements
         const cityInput = document.getElementById('cityInput');
+        const suggestionsEl = document.getElementById('suggestions');
         const searchBtn = document.getElementById('searchBtn');
         const errorMsg = document.getElementById('errorMsg');
         const weatherInfo = document.getElementById('weatherInfo');
@@ -71,127 +119,160 @@
         const temperatureEl = document.getElementById('temperature');
         const conditionEl = document.getElementById('condition');
         const windSpeedEl = document.getElementById('windSpeed');
+        const loadingEl = document.createElement('div');
+        loadingEl.className = 'loading';
+        loadingEl.id = 'loadingIndicator';
+        loadingEl.hidden = true;
+        loadingEl.textContent = 'Loading...';
+        document.querySelector('.weather-container').appendChild(loadingEl);
 
-        // Weather code mapping
+        // Mapping
         const weatherCodes = {
-            0: 'Clear sky',
-            1: 'Mainly clear',
-            2: 'Partly cloudy',
-            3: 'Overcast',
-            45: 'Foggy',
-            48: 'Depositing rime fog',
-            51: 'Light drizzle',
-            53: 'Moderate drizzle',
-            55: 'Dense drizzle',
-            61: 'Slight rain',
-            63: 'Moderate rain',
-            65: 'Heavy rain',
-            71: 'Slight snow',
-            73: 'Moderate snow',
-            75: 'Heavy snow',
-            77: 'Snow grains',
-            80: 'Slight rain showers',
-            81: 'Moderate rain showers',
-            82: 'Violent rain showers',
-            85: 'Slight snow showers',
-            86: 'Heavy snow showers',
-            95: 'Thunderstorm',
-            96: 'Thunderstorm with slight hail',
-            99: 'Thunderstorm with heavy hail'
+            0: 'Clear sky',1:'Mainly clear',2:'Partly cloudy',3:'Overcast',45:'Foggy',48:'Depositing rime fog',51:'Light drizzle',53:'Moderate drizzle',55:'Dense drizzle',61:'Slight rain',63:'Moderate rain',65:'Heavy rain',71:'Slight snow',73:'Moderate snow',75:'Heavy snow',77:'Snow grains',80:'Slight rain showers',81:'Moderate rain showers',82:'Violent rain showers',85:'Slight snow showers',86:'Heavy snow showers',95:'Thunderstorm',96:'Thunderstorm with slight hail',99:'Thunderstorm with heavy hail'
         };
 
-        // Function to show error
-        function showError(message) {
-            errorMsg.textContent = message;
-            errorMsg.classList.add('visible');
-            weatherInfo.classList.remove('visible');
+        // State
+        let selectedCity = null; // {name,country,lat,lon}
+        let suggestions = [];
+        let highlighted = -1;
+        const cache = new Map(); // query -> results
+
+        // Helpers
+        function showError(text){ errorMsg.textContent = text; errorMsg.classList.add('visible'); }
+        function hideError(){ errorMsg.classList.remove('visible'); }
+        function showLoading(){ loadingEl.hidden = false; }
+        function hideLoading(){ loadingEl.hidden = true; }
+
+        // Debounce
+        function debounce(fn, wait=300){ let t; return (...args)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,args), wait); }; }
+
+        // Fetch suggestions
+        async function fetchCities(query){
+            if (cache.has(query)) return cache.get(query);
+            try{
+                const res = await fetch(`https://geocoding-api.open-meteo.com/v1/search?name=${encodeURIComponent(query)}&count=5`);
+                const data = await res.json();
+                const results = (data && data.results) ? data.results.slice(0,5) : [];
+                cache.set(query, results);
+                return results;
+            }catch(e){ return null; }
         }
 
-        // Function to hide error
-        function hideError() {
-            errorMsg.classList.remove('visible');
-        }
-
-        // Function to get weather description from code
-        function getWeatherDescription(code) {
-            return weatherCodes[code] || 'Unknown';
-        }
-
-        // Function to get coordinates for a city
-        async function getCoordinates(cityName) {
-            try {
-                const response = await fetch(`https://geocoding-api.open-meteo.com/v1/search?name=${encodeURIComponent(cityName)}`);
-                const data = await response.json();
-
-                if (!data.results || data.results.length === 0) {
-                    throw new Error('City not found');
-                }
-
-                const { latitude, longitude } = data.results[0];
-                return { latitude, longitude };
-            } catch (error) {
-                throw new Error('Unable to find city coordinates');
+        // Render suggestions
+        function renderSuggestions(list){
+            suggestionsEl.innerHTML = '';
+            highlighted = -1;
+            suggestions = list || [];
+            if (!suggestions || suggestions.length===0){
+                const li = document.createElement('li'); li.className='no-results'; li.textContent='No results found.'; suggestionsEl.appendChild(li); suggestionsEl.hidden=false; return;
             }
+            suggestions.forEach((s, idx)=>{
+                const li = document.createElement('li');
+                li.tabIndex = 0;
+                li.textContent = `${s.name}${s.admin1 ? ', ' + s.admin1 : ''}${s.country ? ', ' + s.country : ''}`;
+                li.addEventListener('click', ()=>selectSuggestion(idx));
+                li.addEventListener('keydown', (e)=>{ if (e.key==='Enter') selectSuggestion(idx); });
+                suggestionsEl.appendChild(li);
+            });
+            suggestionsEl.hidden=false;
         }
 
-        // Function to get weather data
-        async function getWeather(latitude, longitude) {
-            try {
-                const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current_weather=true`);
-                const data = await response.json();
+        function clearSuggestions(){ suggestionsEl.hidden=true; suggestionsEl.innerHTML=''; suggestions=[]; highlighted=-1; }
 
-                if (!data.current_weather) {
-                    throw new Error('Weather data not available');
-                }
-
-                return data.current_weather;
-            } catch (error) {
-                throw new Error('Unable to fetch weather data');
-            }
-        }
-
-        // Function to update UI with weather data
-        function updateWeatherUI(cityName, weatherData) {
-            cityNameEl.textContent = cityName;
-            temperatureEl.textContent = `${Math.round(weatherData.temperature)}°C`;
-            conditionEl.textContent = getWeatherDescription(weatherData.weathercode);
-            windSpeedEl.textContent = `${Math.round(weatherData.windspeed)} km/h`;
-            weatherInfo.classList.add('visible');
-        }
-
-        // Function to handle search
-        async function handleSearch() {
-            const cityName = cityInput.value.trim();
-            
-            if (!cityName) {
-                showError('Please enter a city name');
-                return;
-            }
-
-            searchBtn.disabled = true;
+        function selectSuggestion(idx){
+            const s = suggestions[idx];
+            if (!s) return;
+            // store extra metadata if present (timezone, elevation)
+            selectedCity = { name: s.name, country: s.country, latitude: s.latitude, longitude: s.longitude, timezone: s.timezone, elevation: s.elevation };
+            cityInput.value = `${s.name}${s.admin1 ? ', ' + s.admin1 : ''}${s.country ? ', ' + s.country : ''}`;
+            clearSuggestions();
             hideError();
-
-            try {
-                const coords = await getCoordinates(cityName);
-                const weatherData = await getWeather(coords.latitude, coords.longitude);
-                updateWeatherUI(cityName, weatherData);
-            } catch (error) {
-                showError(error.message);
-            } finally {
-                searchBtn.disabled = false;
-            }
         }
 
-        // Event listeners
-        searchBtn.addEventListener('click', handleSearch);
-        cityInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') {
-                handleSearch();
+        // Keyboard navigation
+        function highlightNext(delta){
+            const items = suggestionsEl.querySelectorAll('li');
+            if (!items.length) return;
+            // skip no-results
+            if (items[0].classList.contains('no-results')) return;
+            highlighted = (highlighted + delta + items.length) % items.length;
+            items.forEach((it,i)=> it.classList.toggle('active', i===highlighted));
+            // ensure visible
+            const el = items[highlighted]; if (el) el.scrollIntoView({block:'nearest'});
+        }
+
+        // Handle input
+        const onType = debounce(async ()=>{
+            const q = cityInput.value.trim();
+            selectedCity = null; // reset selection when typing
+            if (q.length < 2){ clearSuggestions(); return; }
+            hideError();
+            const list = await fetchCities(q);
+            if (list === null){ showError('Unable to fetch suggestions'); return; }
+            renderSuggestions(list);
+        }, 300);
+
+        cityInput.addEventListener('input', onType);
+        cityInput.addEventListener('keydown', (e)=>{
+            if (e.key === 'ArrowDown'){ e.preventDefault(); highlightNext(1); }
+            else if (e.key === 'ArrowUp'){ e.preventDefault(); highlightNext(-1); }
+            else if (e.key === 'Enter'){
+                // If suggestion active, select it
+                const items = suggestionsEl.querySelectorAll('li');
+                if (items.length && highlighted >=0 && !items[0].classList.contains('no-results')){
+                    selectSuggestion(highlighted);
+                    e.preventDefault();
+                    return;
+                }
+                // Otherwise prevent Enter unless selectedCity matches input
+                const cur = cityInput.value.trim();
+                if (!selectedCity || !(cur.indexOf(selectedCity.name)===0)){
+                    e.preventDefault();
+                    showError('Please select a city from the list');
+                }
             }
         });
 
-        // Focus input on page load
+        // Click outside to close suggestions
+        document.addEventListener('click', (e)=>{
+            if (!e.target.closest('.search-wrap')) clearSuggestions();
+        });
+
+        // Get weather
+        async function getWeatherForSelected(){
+            if (!selectedCity){ showError('Please select a city from the list'); return; }
+            hideError();
+            weatherInfo.classList.remove('visible');
+            showLoading();
+            searchBtn.disabled = true;
+            try{
+                const lat = selectedCity.latitude; const lon = selectedCity.longitude;
+                const resp = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true`);
+                const data = await resp.json();
+                if (!data || !data.current_weather) throw new Error('Weather data not available');
+                const w = data.current_weather;
+                cityNameEl.textContent = `${selectedCity.name}${selectedCity.country ? ', ' + selectedCity.country : ''}`;
+                temperatureEl.textContent = `${Math.round(w.temperature)}°C`;
+                conditionEl.textContent = weatherCodes[w.weathercode] || 'Unknown';
+                windSpeedEl.textContent = `${Math.round(w.windspeed)} km/h`;
+                // observed time: use the current_weather.time (ISO) and show timezone if available
+                const observed = w.time || '';
+                const tz = data.timezone || selectedCity.timezone || '';
+                const elev = (typeof data.elevation !== 'undefined') ? data.elevation : (selectedCity.elevation || '');
+                document.getElementById('observedAt').textContent = observed ? new Date(observed).toLocaleString('en-US', { timeZone: tz || undefined }) : '';
+                document.getElementById('tz').textContent = tz || '-';
+                document.getElementById('elevation').textContent = elev !== '' ? `${elev} m` : '-';
+                weatherInfo.classList.add('visible');
+            }catch(err){ showError(err.message || 'Unable to fetch weather data'); }
+            finally{ hideLoading(); searchBtn.disabled = false; }
+        }
+
+        searchBtn.addEventListener('click', getWeatherForSelected);
+
+        // initial focus
         cityInput.focus();
+
+    })();
     </script>
         <!-- Inlined footer (previously components/footer.html) -->
         <footer>
